# Equinox-GTK2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac  equinox.pc.in
src/: animation.c  animation.h  equinox_draw.c  equinox_draw.h  equinox_rc_style.c  equinox_rc_style.h  equinox_style.c  equinox_style.h  equinox_theme_main.c  equinox_types.h  support.c  support.h
